// table, select the proper icon (see legend at the bottom of this documents)
// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛🐣🗑️✨
|
| https://github.com/knative/client/pull/[#]
////

## v0.18.4 (2020-11-25)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add kn _s390x_ binary to the release
| https://github.com/knative/client/pull/1083[#1083]
|===

## v0.18.3 (2020-11-24)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Embed the namespace in request body while creating channels
| https://github.com/knative/client/pull/1117[#1117]

|===

## v0.18.2 (2020-11-10)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add channel sink prefix
| https://github.com/knative/client/pull/1092[#1092]

|===

## v0.18.1 (2020-10-12)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add WithLabel list filter to serving client lib
| https://github.com/knative/client/pull/1054[#1054]

| 🐛
| Fix for test flake when sync waiting and an intermediate error occurs
| https://github.com/knative/client/pull/1052[#1052]

|===

## v0.18.0 (2020-10-07)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add aliases for commands (plural forms, `ksvc`, `ls`)
| https://github.com/knative/client/pull/1041[#1041]

| 🎁
| Add `--annotation-service` and `--annotation-revision` to `kn service create/update`
| https://github.com/knative/client/pull/1029[#1029]

| 🎁
| Add `channel list-types` command
| https://github.com/knative/client/pull/1027[#1027]

| ✨
| Update Knative Serving and Eventing dependencies to 0.18
| https://github.com/knative/client/pull/1025[#1025]

| 🐛
| Fix autoscaling annotations in service metadata
| https://github.com/knative/client/pull/1021[#1021]

| 🎁
| Add `kn subscription` command
| https://github.com/knative/client/pull/1013[#1013]

| 🐛